--- a/.eslintrc
+++ b/.eslintrc
@@ -1,5 +1,12 @@
+<% if (babel) { -%>
+parser: "babel-eslint"
+
+<% } -%>
 env:
   node: true
+<% if (babel) { -%>
+  es6: true
+<% } -%>
 
 rules:
   indent: [2, 2]
@@ -17,6 +24,10 @@ rules:
   space-after-keywords: [2, "always"]
   space-before-blocks: 2
   spaced-line-comment: [2, "always", { exceptions: ["-"]}]
+<% if (babel) { -%>
+  strict: false
+<% } else { -%>
   strict: [2, "global"]
+<% } -%>
   valid-jsdoc: [2, { prefer: { "return": "returns"}}]
   wrap-iife: 2
